profilelist1exp/unpackaged/objects/SFDC_Acct_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Transformation_Discussed_in_AGL__c</fullName>
        <label>Account Transformation Discussed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Not a Transformation Account</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Workforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UDS__c</fullName>
        <label>UDS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unified_Workspace__c</fullName>
        <label>Unified Workspace</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMware_Rep_and_Email__c</fullName>
        <label>VMware Rep and Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMware__c</fullName>
        <label>VMware</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valued_Contracts_held_by_Partner__c</fullName>
        <inlineHelpText>Detail any official contracts held by the partner</inlineHelpText>
        <label>Valued Contracts held by Partner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vertical_Focus__c</fullName>
        <inlineHelpText>What vertical areas do the partner cover and how do we cooperate</inlineHelpText>
        <label>Vertical Focus</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vertical_Market_Growth__c</fullName>
        <inlineHelpText>Describe the specific goal for this area</inlineHelpText>
        <label>Vertical Market Growth</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Virtustream_Rep_and_Email__c</fullName>
        <label>Virtustream Rep and Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtustream__c</fullName>
        <label>Virtustream</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weakness__c</fullName>
        <label>Weakness</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X4Q_Margin_Plan__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <inlineHelpText>Enter values in % format. eg: Enter &apos;15&apos; in the field to indicate 15%</inlineHelpText>
        <label>4Q Margin % Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X4Q_Revenue_Plan__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc - R.10.2 Custom Field for Account Planning||
SFA -Y/PRM-N||
VAL -  N||
CR# -R10.2 # 35778  ||</description>
        <inlineHelpText>Enter values in standard currency</inlineHelpText>
        <label>4Q Revenue Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>font_color_F3F3EC_Message__c</fullName>
        <defaultValue>&quot; *General Account Information, Competitive Information, Contacts and Opportunities are already fields for entry in SFDC, utilize these existing areas and functions in SFDC rather than duplicating information, these will be auto populated when printing the plan* &quot;</defaultValue>
        <description>This field is created (ref:- CR 1404) as a workaround to having a Help text on top of Account PLan page . The label font color has been set to match the background of the record screen.</description>
        <label>&lt;font color=&quot;#fff&quot;&gt;Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Account Plans</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>RSD_Account_Plan_View_FY16</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>No_of_Strategies__c</columns>
        <columns>Annual_Value_of_Strategies__c</columns>
        <columns>Date_Submitted_for_Approval__c</columns>
        <columns>Date_Approved_by_Sales_Management__c</columns>
        <columns>Approved_by_Sales_Management__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Inside_Sales_Representative__c</columns>
        <columns>Sales_Manager__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Starting_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY16</value>
        </filters>
        <label>RSD - Account Plan View - FY16</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RSD_Account_Plan_View_FY1730</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>No_of_Strategies__c</columns>
        <columns>Annual_Value_of_Strategies__c</columns>
        <columns>Date_Submitted_for_Approval__c</columns>
        <columns>Date_Approved_by_Sales_Management__c</columns>
        <columns>Approved_by_Sales_Management__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Inside_Sales_Representative__c</columns>
        <columns>Sales_Manager__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Starting_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY17</value>
        </filters>
        <label>RSD - Account Plan View - FY17</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RSD_Account_Plan_View_FY188</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>No_of_Strategies__c</columns>
        <columns>Annual_Value_of_Strategies__c</columns>
        <columns>Date_Submitted_for_Approval__c</columns>
        <columns>Date_Approved_by_Sales_Management__c</columns>
        <columns>Approved_by_Sales_Management__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Inside_Sales_Representative__c</columns>
        <columns>Sales_Manager__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Starting_Fiscal_Year__c</field>
            <operation>equals</operation>
            <value>FY18</value>
        </filters>
        <label>RSD - Account Plan View - FY18</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RSD_Account_Plan_Waiting_Approval</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Plan_Starting_Fiscal_Year__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>No_of_Strategies__c</columns>
        <columns>Annual_Value_of_Strategies__c</columns>
        <columns>Date_Submitted_for_Approval__c</columns>
        <columns>Date_Approved_by_Sales_Management__c</columns>
        <columns>Approved_by_Sales_Management__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Inside_Sales_Representative__c</columns>
        <columns>Sales_Manager__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <label>RSD - Account Plan - Waiting Approval</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <recordTypes>
        <fullName>Account_Plan_Lite</fullName>
        <active>true</active>
        <description>Entry level version. Used by Direct or Channel business where the plan is for the partner or end user account. For more information: https://it.one.dell.com/sites/SFDCResourceCentre/SharedDocuments/Account_Planning/Pub/AccountPlanningLitePage.html</description>
        <label>Account Plan Lite</label>
    </recordTypes>
    <recordTypes>
        <fullName>Direct_Relationship_Account_Plan</fullName>
        <active>true</active>
        <description>Used by Direct business where the plan is for the end user account. For more information: https://it.one.dell.com/sites/SFDCResourceCentre/SharedDocuments/Account_Planning/Pub/DirectPlanningPage.html</description>
        <label>Direct Relationship Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Enterprise_Account_Plan</fullName>
        <active>true</active>
        <description>Used by Enterprise Sales to successfully capture the full opportunity within our accounts. For more information: https://inside.dell.com/docs/DOC-215470</description>
        <label>Enterprise Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_500_Account_Plan</fullName>
        <active>false</active>
        <description>Used by the Global Org. Worldwide for G500 Accounts. For more information: http://moss.dell.com/sites/SFDC_Resource_Centre/Account_Planning.aspx</description>
        <label>Global Account Plan (Obsolete)</label>
    </recordTypes>
    <recordTypes>
        <fullName>PLE_Account_Plan</fullName>
        <active>false</active>
        <description>Used by Large Institutes (Public and Large Enterprise). For more information: http://moss.dell.com/sites/SFDC_Resource_Centre/Account_Planning.aspx</description>
        <label>LI Account Plan (Obsolete)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Account_Plan</fullName>
        <active>true</active>
        <description>Used by Channel business where the plan is for the partner. For more information: https://it.one.dell.com/sites/SFDCResourceCentre/SharedDocuments/Partner_business_planning/PartnerPlanningPage.html</description>
        <label>Channel/Partner Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMB_Account_Plan</fullName>
        <active>false</active>
        <description>Used by Preferred accounts org. world wide. For more information: http://moss.dell.com/sites/SFDC_Resource_Centre/Account_Planning.aspx</description>
        <label>Preferred Account Plan (Obsolete)</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CR_2211_Status_Cant_Change_Frm_Approved</fullName>
        <active>true</active>
        <description>Plan Status of an Approved Account Plan cannot be updated .</description>
        <errorConditionFormula>AND 
( 
ISCHANGED(Plan_Status__c ) , 
ISPICKVAL(PRIORVALUE(Plan_Status__c), &apos;Approved&apos; ) 
)</errorConditionFormula>
        <errorDisplayField>Plan_Status__c</errorDisplayField>
        <errorMessage>Plan Status of an Approved Account Plan cannot be updated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CR_6689_Sales_Manager</fullName>
        <active>true</active>
        <errorConditionFormula>AND ($RecordType.Name = &quot;Direct Relationship Account Plan&quot;, OR(  
Sales_Manager__c = Account_Executive__c, 
Sales_Manager__c = Inside_Sales_Representative__c, 
Sales_Manager__c = Account_Plan_Owner__c))</errorConditionFormula>
        <errorDisplayField>Sales_Manager__c</errorDisplayField>
        <errorMessage>Sales Manager field cannot not be blank, or the same as Account Executive, Inside Sales Representative, or Account Plan Owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Field_required_if_AGL_is_Complete</fullName>
        <active>true</active>
        <description>Transformation Discussed in AGL field is required if Account Growth Lab (AGL)? is complete</description>
        <errorConditionFormula>ISNULL( Transformation_Discussed_in_AGL__c )  &amp;&amp;   ISPICKVAL( Account_Growth_Lab_AGL__c , &apos;Complete&apos;)</errorConditionFormula>
        <errorDisplayField>Transformation_Discussed_in_AGL__c</errorDisplayField>
        <errorMessage>This field is required if Account Growth Lab (AGL)? is Complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fields_Required_for_GTM_Approach</fullName>
        <active>false</active>
        <description>When GTM Approach = Partner OR Direct &amp; Partner the following fields are required 
Strategic Partner 1, Partner Account Manger, DellEMC Competitors carried by Partners</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Direct_Relationship_Account_Plan&apos;, 
OR(ISPICKVAL(Go_To_Market_Approach__c,&apos;Partner&apos;),ISPICKVAL(Go_To_Market_Approach__c,&apos;Direct &amp; Partner&apos;)),
OR(ISBLANK(Strategic_Partner_1__c), ISBLANK(Partner_Account_Manager_1__c), ISBLANK(DellEMC_Competitors_carried_by_Partners__c)
))</errorConditionFormula>
        <errorMessage>Strategic Partner 1, Partner Account Manager 1 and DellEMC Competitors carried by Partners are Required. Please enter value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Changing_Fiscal_Year</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(TEXT(Plan_Starting_Fiscal_Year__c  )) &amp;&amp; ISCHANGED( Plan_Starting_Fiscal_Year__c)</errorConditionFormula>
        <errorMessage>You can only change the Planning Year by using the “Change FY” functionality</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>R12_5_Prevent_Status_Update</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
 
AND
(
CreatedById = $User.Id,
ISCHANGED(Plan_Status__c) ,
OR(
ISPICKVAL(Plan_Status__c, &apos;Approved&apos;) , ISPICKVAL(Plan_Status__c, &apos;Rejected&apos;)
)
),
 
AND
(
ISNEW(),
OR(
ISPICKVAL(Plan_Status__c, &apos;Approved&apos;) , ISPICKVAL(Plan_Status__c, &apos;Rejected&apos;)
)
)
 
)</errorConditionFormula>
        <errorDisplayField>Plan_Status__c</errorDisplayField>
        <errorMessage>You are not authorized to Approve or Reject the Account Plan . Kindly submit the account plan for approval by clicking on “Submit for Approval” button</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields_GTM_Approach</fullName>
        <active>true</active>
        <description>When GTM Approach = Partner OR Direct &amp; Partner Strategic Partner 1, Partner Value Proposition are required</description>
        <errorConditionFormula>AND(
NOT($Setup.System_Behavior_Bypasser__c.Bypass_Account_Plan_VRs__c),
RecordType.DeveloperName = &apos;Direct_Relationship_Account_Plan&apos;, 
OR(ISNEW(),DATEVALUE(CreatedDate) &gt; DATE(2019,11,16)),
OR(ISPICKVAL(Go_To_Market_Approach__c,&apos;Partner&apos;),
ISPICKVAL(Go_To_Market_Approach__c,&apos;Direct &amp; Partner&apos;)),
OR(ISBLANK(Strategic_Partner_1__c),isblank(Go_To_Market_Approach_Comments__c))
)</errorConditionFormula>
        <errorMessage>Strategic Partner 1 and Partner Value Proposition are required. Please enter value.</errorMessage>
    </validationRules>
</CustomObject>